# pyss

./: .gitignore  README.md  advanced.md  deployment.md  pyproject.toml  pyss.yaml  requirements.txt  setup.py
.github/workflows/: run_linting.yml  run_tests.yml
pyscript/: main.py
pyss/: _arguments.py  _constants.py  _environment.py  _execution.py  _logging.py  _scripts.py  _types.py  _validator.py  main.py
tests/: test_schema.py
